# rag_series

./: .gitignore  pyproject.toml
note_1/: main.ipynb
note_2/: docker-compose.yml  main.ipynb
note_3/: main.ipynb
note_4/: main.ipynb
note_5/: fusion.ipynb  multi-query.ipynb
note_6/: parser.ipynb
note_7/: input.xlsx  output.xlsx  ragas.ipynb  ragas_langchain.ipynb
note_8/: embedding.ipynb  임베딩 결과.xlsx
